# tobb-ocr-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: deps.py  router.py
app/api/v1/: extract.py  health.py  search.py
app/clients/: http_client.py  session_manager.py
app/core/: exceptions.py  logging.py  middleware.py
app/schemas/: enums.py  requests.py  responses.py
app/services/: auth_client.py  captcha_handler.py  extractor.py  gazette_client.py  ocr_pipeline.py  parser.py  pdf_fetcher.py  search_client.py  selectors.py  tsm_mapping.py
app/utils/: image_processing.py  retry.py  ua_rotation.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/contract/: test_openapi.py  test_payloads.py
tests/fixtures/: expected_extract_output.json  sample_search_response.html
tests/integration/: test_extract_flow.py  test_search_flow.py
tests/unit/: test_captcha_handler.py  test_image_processing.py  test_ocr_pipeline.py  test_parser.py  test_schemas.py
